# PYTHON_ZUS03

./: Test_Python_LUW_albiniak.docx  biblioteka_simply.py
DZIEN_1/: analiza_dokumentu.py  car_repair.py  car_repair_error.py  dekoratory.py  funkcje_w_pythonie.py  kolekcje_pythona.py  profilowanie _funkcji.py  proste_property.py
DZIEN_1/metodyplatnosci_obiekty/: creditcard.py  crypto.py  main.py  payment.py  pypal.py
DZIEN_1/pojazdy_obiekty/: main.py  samochod.py
DZIEN_2/: agregacja.py  contextmanager.py  filemanager.py  funkcja_add.py  funkcja_call.py  nowypdf.py  plikiTekstowe.py
DZIEN_2/figurygeometryczne/: figura.py  main.py
DZIEN_2/gnerowanieplikow/: csvgenerator.py  jsongenerator.py  main.py  pdfgenerator.py  report.py
DZIEN_2/multicase/: main.py  opis.txt  switchcase.py
DZIEN_2/pakiet_Python/: README.md  cleaner.py  counter.py  init_textutlis.py  main.py  pyproject.toml  setup.py  test_cleaner.py
DZIEN_3/: books_json.py  books_pandas.py  dynamic_interpreter.py  funkcje_statyczne.py  klasa_danych.py  order_ec.py  sandbox.py
DZIEN_3/internal_class/: ccreate.py  main.py  mountain.py  przestrzen_nazw.py  valid.py
DZIEN_3/mojaprzestrzen_nazw/: main.py  runners.py
DZIEN_3/pliki_z_danymi/: json_save.py
DZIEN_3/zadanie_stat/: main.py  runsession.py
DZIEN_4/: metoda_klasy.py  obiekty_minuty.py
DZIEN_4/THREADING/: asyncurls.py  lockthread.py  modernasync.py  multithreading.py  semafor.py
DZIEN_4/XML/: create_xml.py
DZIEN_5/: ftp.py  pydantic_validator.py  scp.py  type_hinting.py  urzadzenia_sieciowe.py  zarzadzanie_serwerami.py
(+36 files in other folders)
